--- a/modulo08/RedeSocial/FrontEnd/css/home.css
+++ b/modulo08/RedeSocial/FrontEnd/css/home.css
@@ -19,6 +19,7 @@ body{
     background: rgba(0, 0, 0, 0.8);    
     color: yellow;
     font-size: 24px;
+    z-index: 1000;
 }
 
     .itens-navegacao{
@@ -29,6 +30,12 @@ body{
 
     .solicitacoes label{
         margin-left: 46px;
+    }
+
+    .logout label:hover{
+        color:red;
+        cursor: pointer;
+        transition: 0.1s;
     }
 
 .barra-lateral{        
@@ -106,10 +113,12 @@ body{
     height: 230px;    
     background: rgba(30, 30,30, 0.8);
     margin-left: 100px;
+    margin-bottom: 20px;
     border-radius: 10px;
     box-shadow: 5px 5px 2px #363636;
     text-align: center;
-    color: yellow;            
+    color: yellow; 
+    transition: 0.1s;           
 }
     .card-feed-postagem form label{
         margin-top: 15px;   
@@ -140,6 +149,19 @@ body{
     }
 
 .postagens-amigos{
-    margin-top: 20px;
+    margin-bottom: 20px;
 }
-    
+
+       .postagens-amigos .postagemAmigo{
+           margin-top: 15px;
+           min-height: 100px;           
+           background: white;           
+           text-align: left;
+           color: black;
+           border-radius: 5px;
+       }
+
+            .postagens-amigos .postagemAmigo label{
+                margin-left: 10px;
+                margin-top: 5px;
+            }
