--- a/modulo08/RedeSocial/FrontEnd/css/estilo.css
+++ b/modulo08/RedeSocial/FrontEnd/css/estilo.css
@@ -25,6 +25,7 @@ body {
     width: 100vw;
     background: rgba(0, 0, 0, 0.8);
     text-align: center;
+    z-index: 1000;
 }
 
     .navegacao h1 {
