--- a/modulo08/RedeSocial/FrontEnd/css/home.css
+++ b/modulo08/RedeSocial/FrontEnd/css/home.css
@@ -91,8 +91,10 @@ body{
     margin-top: 90px;   
 }
 
+
 .radio{
-    margin-top: 90px;  
+    margin-top: 90px; 
+    margin-left: 100px;     
     background: rgba(30, 30,30, 0.8);
     min-width: 430px;
     border-radius: 10px;        
@@ -110,7 +112,8 @@ body{
     }
 
 .card-feed-postagem{
-    height: 230px;    
+    height: 230px; 
+    width: 400px;   
     background: rgba(30, 30,30, 0.8);
     margin-left: 100px;
     margin-bottom: 20px;
@@ -165,3 +168,7 @@ body{
                 margin-left: 10px;
                 margin-top: 5px;
             }
+
+        .postagemAmigo{
+            word-wrap: break-word;
+        }
